--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,21 +1,35 @@
+.header {
+    padding: 25px
+}
+
+
 .inventory-item {
-  background-color: #d4f7ed;
-  padding: 25px;
-  border-style: solid;
-  border-radius: 25px;
-  border-width: 1px;
-  border-color: #000000
+    background: rgb(97,205,172);
+    background: linear-gradient(0deg, rgba(97,205,172,1) 0%, rgba(178,221,116,1) 100%);
+    padding: 10px;
+    border-style: solid;
+    border-radius: 25px;
+    border-width: 1px;
+    border-color: #000000;
+    margin: 10px;
+    max-width: 75%;
+    min-width: 600px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
 }
 
 .inventory {
-    background-color: #454545;
+    background-color: #c2c2c2;
     padding: 25px;
-    border-radius: 25px;
+    max-width: 100vw;
 }
 
 button {
     background-color: #4CAF50; /* Green */
-    border: none;
+    border: solid;
+    border-color: black;
+    border-width: 1px;
+    margin: 2px;
     color: white;
     padding: 5px 15px;
     text-align: center;
@@ -26,7 +40,37 @@ button {
 
 button:hover {
     background-color: rgb(95, 237, 99); /* Green */
-    border: none;
+    border: solid;
+    border-color: black;
+    border-width: 1px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    color: white;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.redButton {
+    background-color: rgb(199, 68, 44); /* Red */
+    border: solid;
+    border-color: black;
+    border-width: 1px;
+    margin: 2px;
+    color: white;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.redButton:hover {
+    background-color: rgb(245, 112, 88); 
+    border: solid;
+    border-color: black;
+    border-width: 1px;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     color: white;
     padding: 5px 15px;
