--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,10 +2,24 @@
     padding: 25px
 }
 
+.selected-item {
+    background: #cd6c61;
+    background: linear-gradient(0deg, #cd6c61 0%, rgb(221, 209, 116) 100%);
+    padding: 10px;
+    border-style: solid;
+    border-radius: 25px;
+    border-width: 3px;
+    border-color: #000000;
+    margin: 10px;
+    margin-left: 50px;
+    max-width: 75%;
+    min-width: 600px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);   
+}
 
 .inventory-item {
-    background: rgb(97,205,172);
-    background: linear-gradient(0deg, rgba(97,205,172,1) 0%, rgba(178,221,116,1) 100%);
+    background: #61cdac;
+    background: linear-gradient(0deg, #61cdac 0%, rgba(178,221,116,1) 100%);
     padding: 10px;
     border-style: solid;
     border-radius: 25px;
