--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,7 @@
+
 .header {
-    padding: 25px
+    padding: 25px;
+    font-family: 'Bebas Neue', cursive;
 }
 
 .selected-item {
@@ -29,13 +31,13 @@
     max-width: 75%;
     min-width: 600px;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-
 }
 
 .inventory {
     background-color: #c2c2c2;
     padding: 25px;
     max-width: 100vw;
+    
 }
 
 button {
