--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,6 +4,21 @@
     font-family: 'Bebas Neue', cursive;
 }
 
+.unavailable-item {
+    background: #9fb0b1;
+    background: linear-gradient(0deg, #9fb0b1 0%, #797979 100%);
+    padding: 10px;
+    border-style: solid;
+    border-radius: 25px;
+    border-width: 3px;
+    border-color: #000000;
+    margin: 10px;
+    margin-left: 50px;
+    max-width: 75%;
+    min-width: 600px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);  
+}
+
 .selected-item {
     background: #cd6c61;
     background: linear-gradient(0deg, #cd6c61 0%, rgb(221, 209, 116) 100%);
