--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,81 +2,82 @@
 .header {
     padding: 25px;
     font-family: 'Bebas Neue', cursive;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 .unavailable-item {
-    background: #9fb0b1;
-    background: linear-gradient(0deg, #9fb0b1 0%, #797979 100%);
+    background: #f0f0f0;
     padding: 10px;
-    border-style: solid;
     border-radius: 25px;
-    border-width: 3px;
-    border-color: #000000;
-    margin: 10px;
-    margin-left: 50px;
+    border-bottom: 12px solid #a5a5a5;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5px;
     max-width: 75%;
     min-width: 600px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);  
 }
 
 .selected-item {
-    background: #cd6c61;
-    background: linear-gradient(0deg, #cd6c61 0%, rgb(221, 209, 116) 100%);
+    background: #ffffff;
     padding: 10px;
-    border-style: solid;
     border-radius: 25px;
-    border-width: 3px;
-    border-color: #000000;
-    margin: 10px;
-    margin-left: 50px;
+    border-top: 3px solid #c7442c;
+    border-left: 3px solid #c7442c;
+    border-right: 3px solid #c7442c;
+    border-bottom: 12px solid #c7442c;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5px;
     max-width: 75%;
     min-width: 600px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);   
+    box-shadow: 0 12px 16px 0 #0000003d, 0 17px 50px 0 #00000030;   
 }
 
 .inventory-item {
-    background: #61cdac;
-    background: linear-gradient(0deg, #61cdac 0%, rgba(178,221,116,1) 100%);
+    background: #ffffff;
     padding: 10px;
-    border-style: solid;
+    border-bottom: 12px solid #40A4F4;
     border-radius: 25px;
-    border-width: 1px;
-    border-color: #000000;
-    margin: 10px;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5px;
     max-width: 75%;
     min-width: 600px;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .inventory {
-    background-color: #c2c2c2;
+    background-color: #ffffff;
     padding: 25px;
     max-width: 100vw;
-    
+    margin: 0 auto
 }
 
 button {
     background-color: #4CAF50; /* Green */
-    border: solid;
-    border-color: black;
-    border-width: 1px;
-    margin: 2px;
-    color: white;
-    padding: 5px 15px;
+    border-radius: 5px;
+    margin: auto;
+    padding: 10px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
 }
 
+button:focus {
+    outline: none !important;
+}
+
 button:hover {
-    background-color: rgb(95, 237, 99); /* Green */
-    border: solid;
-    border-color: black;
-    border-width: 1px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    color: white;
-    padding: 5px 15px;
+    background-color: #5fed63; /* Green */
+    border-radius: 5px;
+    margin: auto;
+    padding: 10px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -84,13 +85,10 @@ button:hover {
 }
 
 .redButton {
-    background-color: rgb(199, 68, 44); /* Red */
-    border: solid;
-    border-color: black;
-    border-width: 1px;
-    margin: 2px;
-    color: white;
-    padding: 5px 15px;
+    background-color: #c7442c; /* Red */
+    border-radius: 5px;
+    margin: auto;
+    padding: 10px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -98,15 +96,26 @@ button:hover {
 }
 
 .redButton:hover {
-    background-color: rgb(245, 112, 88); 
-    border: solid;
-    border-color: black;
-    border-width: 1px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    color: white;
-    padding: 5px 15px;
+    background-color: #f57058; 
+    border-radius: 5px;
+    margin: auto;
+    padding: 10px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+.optionsBox {
+    background: #ffffff;
+    text-align: center;
+    padding: 10px;
+    border-radius: 25px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    max-width: 50%;
+    min-width: 300px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
