--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -11,6 +11,20 @@
     text-align: center;
 }
 
+.receipt-item {
+    background: #ffffff;
+    padding: 10px;
+    border-bottom: 12px solid #40A4F4;
+    border-radius: 25px;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5px;
+    max-width: 75%;
+    min-width: 600px;
+    box-shadow: 0 12px 16px 0 #0000003d, 0 17px 50px 0 #00000030;
+}
+
 .unavailable-item {
     background: #f0f0f0;
     padding: 10px;
@@ -59,7 +73,7 @@
     background-color: #ffffff;
     padding: 25px;
     max-width: 100vw;
-    margin: 0 auto
+    margin: 0 auto;
 }
 
 button {
